fipogen/server/views/style.css
body {
  margin-left: 5%;
  margin-right: 5%;
}


/* main part */
#main {
  margin-top:20px;
  margin-bottom:20px;
}

.l-container div {
    float: left;
}
.r-container div {
  float: right;

}
.ccon div{
  float: center;
}

/* Title */

#title a{
color: #0090d3;
cursor: auto;
display: inline;
font-family: 'Yanone Kaffeesatz', sans-serif;
font-size: 70px;
font-weight: normal;
height: auto;
line-height: 55px;
width: auto;
text-decoration: none;
}

#tagline {
  box-sizing: border-box;
  color: rgb(79, 79, 79);
  display: block;
  font-family: 'Yanone Kaffeesatz', sans-serif;
  font-size: 26px;
  font-weight: 200;
  height: 31px;
  letter-spacing: normal;
  margin-bottom: 20px;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: -20px;
}

#logo
{
  position: absolute;
  top:10px;
  right:5%;
}

#title a .firstpart{
  color: #000000;
}

/* footer */

#footer { 
  display: block;
  clear: both;
  margin-top: 10px;
}

/* Menu, from http://cssmenumaker.com/builder/403069 */

#cssmenu ul,
#cssmenu li,
#cssmenu span,
#cssmenu a {
  margin: 0;
  padding: 0;
  position: relative;
}
#cssmenu {
  height: 49px;
  border-radius: 5px 5px 0 0;
  -moz-border-radius: 5px 5px 0 0;
  -webkit-border-radius: 5px 5px 0 0;
  background: #141414;
  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAxCAIAAACUDVRzAAAAA3NCSVQICAjb4U/gAAAALElEQVQImWMwMrJi+v//PxMDw3+m//8ZoPR/qBgDEhuXGLoeYswhXg8R5gAAdVpfoJ3dB5oAAAAASUVORK5CYII=) 100% 100%; 
  background: -moz-linear-gradient(top, #32323a 0%, #141414 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32323a), color-stop(100%, #141414));
  background: -webkit-linear-gradient(top, #32323a 0%, #141414 100%);
  background: -o-linear-gradient(top, #32323a 0%, #141414 100%);
  background: -ms-linear-gradient(top, #32323a 0%, #141414 100%);
  background: linear-gradient(to bottom, #32323a 0%, #141414 100%);
  border-bottom: 2px solid #0fa1e0;
}
#cssmenu:after,
#cssmenu ul:after {
  content: '';
  display: block;
  clear: both;
}
#cssmenu a {
  background: #141414;
  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAxCAIAAACUDVRzAAAAA3NCSVQICAjb4U/gAAAALElEQVQImWMwMrJi+v//PxMDw3+m//8ZoPR/qBgDEhuXGLoeYswhXg8R5gAAdVpfoJ3dB5oAAAAASUVORK5CYII=) 100% 100%; 
  background: -moz-linear-gradient(top, #32323a 0%, #141414 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #32323a), color-stop(100%, #141414));
  background: -webkit-linear-gradient(top, #32323a 0%, #141414 100%);
  background: -o-linear-gradient(top, #32323a 0%, #141414 100%);
  background: -ms-linear-gradient(top, #32323a 0%, #141414 100%);
  background: linear-gradient(to bottom, #32323a 0%, #141414 100%);
  color: #ffffff;
  display: inline-block;
  font-family: Helvetica, Arial, Verdana, sans-serif;
  font-size: 12px;
  line-height: 49px;
  padding: 0 20px;
  text-decoration: none;
}
#cssmenu ul {
  list-style: none;
}
#cssmenu > ul {
  float: left;
}
#cssmenu > ul > li {
  float: left;
}
#cssmenu > ul > li:hover:after {
  content: '';
  display: block;
  width: 0;
  height: 0;
  position: absolute;
  left: 50%;
  bottom: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid #0fa1e0;
  margin-left: -10px;
}
#cssmenu > ul > li:first-child > a {
  border-radius: 5px 0 0 0;
  -moz-border-radius: 5px 0 0 0;
  -webkit-border-radius: 5px 0 0 0;
}
#cssmenu > ul > li:last-child > a {
  border-radius: 0 5px 0 0;
  -moz-border-radius: 0 5px 0 0;
  -webkit-border-radius: 0 5px 0 0;
}
#cssmenu > ul > li.active > a {
  box-shadow: inset 0 0 3px #000000;
  -moz-box-shadow: inset 0 0 3px #000000;
  -webkit-box-shadow: inset 0 0 3px #000000;
  background: #070707;
  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAxCAIAAACUDVRzAAAAA3NCSVQICAjb4U/gAAAALklEQVQImWNQU9Nh+v//PxMDw3+m//8ZkNj/mRgYIHxy5f//Z0BSi18e2TwS5QG4MGB54HL+mAAAAABJRU5ErkJggg==) 100% 100%; 
  background: -moz-linear-gradient(top, #26262c 0%, #070707 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #26262c), color-stop(100%, #070707));
  background: -webkit-linear-gradient(top, #26262c 0%, #070707 100%);
  background: -o-linear-gradient(top, #26262c 0%, #070707 100%);
  background: -ms-linear-gradient(top, #26262c 0%, #070707 100%);
  background: linear-gradient(to bottom, #26262c 0%, #070707 100%);
}
#cssmenu > ul > li:hover > a {
  background: #070707;
  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAxCAIAAACUDVRzAAAAA3NCSVQICAjb4U/gAAAALklEQVQImWNQU9Nh+v//PxMDw3+m//8ZkNj/mRgYIHxy5f//Z0BSi18e2TwS5QG4MGB54HL+mAAAAABJRU5ErkJggg==) 100% 100%; 
  background: -moz-linear-gradient(top, #26262c 0%, #070707 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #26262c), color-stop(100%, #070707));
  background: -webkit-linear-gradient(top, #26262c 0%, #070707 100%);
  background: -o-linear-gradient(top, #26262c 0%, #070707 100%);
  background: -ms-linear-gradient(top, #26262c 0%, #070707 100%);
  background: linear-gradient(to bottom, #26262c 0%, #070707 100%);
  box-shadow: inset 0 0 3px #000000;
  -moz-box-shadow: inset 0 0 3px #000000;
  -webkit-box-shadow: inset 0 0 3px #000000;
}
#cssmenu .has-sub {
  z-index: 1;
}
#cssmenu .has-sub:hover > ul {
  display: block;
}
#cssmenu .has-sub ul {
  display: none;
  position: absolute;
  width: 200px;
  top: 100%;
  left: 0;
}
#cssmenu .has-sub ul li {
  *margin-bottom: -1px;
}
#cssmenu .has-sub ul li a {
  background: #0fa1e0;
  border-bottom: 1px dotted #6fc7ec;
  filter: none;
  font-size: 11px;
  display: block;
  line-height: 120%;
  padding: 10px;
}
#cssmenu .has-sub ul li:hover a {
  background: #0c7fb0;
}
#cssmenu .has-sub .has-sub:hover > ul {
  display: block;
}
#cssmenu .has-sub .has-sub ul {
  display: none;
  position: absolute;
  left: 100%;
  top: 0;
}
#cssmenu .has-sub .has-sub ul li a {
  background: #0c7fb0;
  border-bottom: 1px dotted #6db2d0;
}
#cssmenu .has-sub .has-sub ul li a:hover {
  background: #095c80;
}
        /* Form style page FPF */
* {box-sizing: border-box;}
.wrapper-FPF {
  max-width: 940px;
  margin: 0 auto;
}

.wrapper-FPF > label {
  border-radius: 2px;
  min-width:200px;
  min-height: 20px;
  padding: 5px;
}

.wrapper-FPF > input {
  border-radius: 2px;
  min-width:100px;
  min-height: 20px;
}


.wrapper-FPF {
  display: grid;
	grid-template-columns: repeat(10, 1fr);
	grid-gap: 5px;
	grid-auto-rows: minmax(30px, auto);

}

.first-heading-FPF-form {
  grid-column: 1;
  grid-row: 1 ;
  font-size: large;
  font-weight: bold;

}
.first-label-FPF-form {
  grid-row: 3;
  grid-column: 1;
}
.format-input-FPF-form {
  grid-column: 2;
  grid-row: 3;
}
.explanation-label-FPF-form {
  grid-column: 1 /3;
  grid-row: 4;
  width: 500px;
  padding-top:10px;
}

.second-heading-FPF-form {
  grid-column: 1;
  grid-row: 6;
  font-size: large;
  font-weight: bold;
}
.notation-choice-FPF-form {
  grid-column: 1;
  grid-row: 7;
    min-width: 300px;
    padding: 1em;
  grid-gap: 10px;
}
.checkbox-fract-FPF-form {
  grid-column: 2;
  grid-row: 7;
    padding: 1em;
  grid-gap: 10px;
}
.choice-label-FPF-form {
  grid-column: 1;
  grid-row: 8;
    padding: 1em;
  grid-gap: 10px;
}
.checkbox-power2-FPF-form {
  grid-column: 2;
  grid-row: 8;
    padding: 1em;
  grid-gap: 10px;
    min-width: 400px;
}
.color-choice-FPF-form {
  grid-column: 1;
  grid-row: 9;
    padding: 1em;
  grid-gap: 10px;
}
.checkbox-binary-FPF-form {
  grid-column: 2;
  grid-row: 9;
    padding: 1em;
  grid-gap: 10px;
}
.checkbox-num-vals-FPF-form {
  grid-column: 2;
  grid-row: 10;
    padding: 1em;
  grid-gap: 10px;
}
.submit-FPF-form {
  grid-column: 3;
  grid-row: 11;
}


		/* Form style(page constants) follows */

		* {box-sizing: border-box;}
		.wrapper-constants-form {
			max-width: 940px;
			margin: 0 auto;
		}

		.wrapper-constants-form > div {
			border: 2px solid #0090d3;
			border-radius: 2px;
			background-color: lightgrey;

		}
		.wrapper-constants-form > label {
			color: #060200;
			max-height: 50px;
			min-width: 150px;
			text-align: left;
		}
		.wrapper-constants-form > input {
			border-radius: 2px;
			max-height: 30px;
			max-width: 100px;
			min-width: 20px;
			min-height: 10px;

		}
		.wrapper-constants-form > button {
			background-color: rgba(0, 144, 211, 0.22);
			border-radius: 2px;
			max-height: 30px;
			max-width: 50px;
			position: relative;
			text-align: center;
		}

		.wrapper-constants-form {
			display: grid;
			grid-template-columns: repeat(10, 1fr);
			grid-gap: 0px;
			grid-auto-rows: minmax(30px, auto);
			/*grid-auto-columns: minmax(10px, auto);*/

		}
		.first-label-constants-form {
			grid-column: 1;
			grid-row: 1;
		}
		.div-text-constants-from {
			grid-column: 2 / 6;
			grid-row: 1 / 3;
			overflow:hidden;
			overflow-y:scroll;
			width:520px;
			height: 100px;
            padding: 0px;

		}
		.upload-label-constants-form {
			grid-row: 3  ;
			grid-column: 2;
			width: 150px;
			height: 20px;
            padding-top: 10px;
		}
		.upload-span-constants-form {
			grid-column: 3;
			grid-row: 3;
			/*text-align: left;*/
            padding-top: 10px;
		}
		.explanation-constants-form {
			grid-column: 2 / 5;
			grid-row: 3;
			width: 400px;
            padding-top: 40px;

			/*max-height: 100px;*/
		}
		.wl-label-constants-form {
			grid-column: 1;
			grid-row: 5;
            /*height: 20px;*/
		}
		.wl-input-constants-form {
			grid-column: 2 / 3;
			grid-row: 5;
			text-align: left;
            /*width: 100px;*/
		}
        .or-label-constants-form
        {
            grid-column: 1 ;
			grid-row: 6;
        }
		.FPF-label-constants-form {
			grid-column: 1 ;
			grid-row: 7;
		}
		.FPF-input-constants-form {
			grid-column: 2 / 3;
			grid-row: 7;
			text-align: left;
            /*width: 100px;*/
		}
		.reset-button-constants-form
		{
			grid-row: 9;
			grid-column: 2;
            width: 100px;

        }
		.submit-button-constants-form
		{
			grid-row: 9;
			grid-column: 4;
			background-color: lightgreen;
            width: 100px;
		}
		.headings
		{
			background-color: #0090d3;
			color: white;
		}

.tooltip {
    position: relative;
    display: inline-block;

}

.tooltip .tooltiptext {
    visibility: hidden;
    width: 120px;
    background-color: #0090d3;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;

    /* Position the tooltip */
    position: absolute;
    z-index: 1;
    top: 100%;
    left: 50%;
    margin-left: -60px;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
}

